rewrite to r6 class structure; removed abs-stuff; simplifications; cleanup

--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -19,10 +19,10 @@ library(rmarkdown)
 
 # Introduction
 
-This package implements methods to provide perturbation for statistical tables. The method is based on the paper *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar). Furthermore it is possible to perturb tables using a different approach developed by the Federal Statistical Office of Germany (Destatis). The two approaches differ in the way record keys have to be specified, the format of the perturbation tables and the way, the actual lookup is done. Perturbation tables need to be specified using functionality from package [**ptable**](https://github.com/sdcTools/ptable).
+This package implements methods to provide perturbation for statistical tables. The method implemented in this package is largely based on the paper *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar). This approach however was generalized and a new specification on how record keys are specified and the lookup-tables are defined is used. This package makes usage of perturbation tables that can be defined in the [**ptable**](https://github.com/sdcTools/ptable) package.
 
 ## Main Features
-In the **cellKey** package it is possible to make use of two different ways on how to pertub multidimensional count tables - methods `abs` and `destatis`. For both of them methods are provided to generate suitable record keys using function `ck_generate_rkeys()`. For the perturbation of magnitude tables, for now only the method developed by the ABS is supported. Using sha1-checksums on the input datasets, we can make sure that the same record keys are generated whenever the same input data set is used for which record keys should be generated. However, it is also possible of course to use already pre-generated record keys available as variable in the microdata set.
+In the **cellKey** package it is possible to pertub multidimensional count and magnitude tables. Functionality to generate suitable record keys is provided in function `ck_generate_rkeys()`. Using sha1-checksums on the input datasets, we can make sure that the same record keys are generated whenever the same input data set is used for which record keys should be generated. However, it is also possible of course to use already pre-generated record keys available as variable in the microdata set.
 
 The package allows to make use of sampling weights. Thus, both weighted and unweighted count and magnitude tables can be perturbed. The hierarchical structure of the variables spanning the table can be arbitrarily complex. To generate these hierarchies, the **cellKey** packages depends on functionality available in package [**sdcHierarchies**](https://cran.r-project.org/package=sdcHierarchies). Finally, auxiliary methods are provided that allow to extract valueable information from objects created by the main function of this package `perturbTable()`. For example `mod_counts()` returns a data object showing for each cell the perturbation value and where it was found in the lookup table.
 
@@ -37,9 +37,23 @@ library(cellKey)
 packageVersion("cellKey")
 ```
 
-### Loading testdata
-The testdata set we are using in this example contains information on person-level along with sampling weights as well as some categorical and continuously scaled variables. We also compute some binary variables for which we also want to create perturbed tables. 
 
+The first step in this approach is to generate a statistical table, which can be achieved using `ck_setup`. This function generates an object that contains all the information required to perturb count- (and optionally continuously scaled) variables. There are however a few inputs that `ck_setup()` requires and that need to be generated beforehand. These inputs are:
+
+- `x`: a `data.frame` or `data.table` containing microdata
+- `rkey`: defines where to find or how to compute record keys. It is possible to either specify a scalar character name or a number. If a number is specified, record keys are internally created by sampling from a uniform distribution between 0 and 1 with the random numbers rounded to the specified value of digits. If a name is specified, this name is interpreted as a variable name within `x` already containing record keys.
+- `dims`: a named list where each list element contains a hierarchy created with functionality from package [**sdcHierarchies**](ttps://cran.r-project.org/package=sdcHierarchies) and each name refers to a variable in `x`
+- `w`: either `NULL` (no weights) or the name of a variable in `x` that contains weights
+- `countvars`: an optional character vector of variables in `x` holding counts. In any case a special count variable `total` is internally generated that is `1` for each row of `x`
+- `numvars`: an optional character vector of variables in `x` holding numerical variables that can later be perturbed.
+- `params_cnts`: an object containing perturbation parameters relevant to `countvars` that needs to be created using `ck_params_cnts()`.
+- `params_nums`: if `numvars` was specified, an object containing perturbation parameters relevant to `numvars` that must to be created using `ck_params_nums()`.
+
+We now show how to generate the required inputs. The first step is to prepare the inputdata.
+
+
+### Specifying inputdata
+The testdata set we are using in this example contains information on person-level along with sampling weights as well as some categorical and continuously scaled variables. We also compute some binary variables for which we also want to create perturbed tables. 
 ```{r}
 dat <- ck_create_testdata()
 dat <- dat[, c("sex", "age", "savings", "income", "sampling_weight")]
@@ -47,53 +61,19 @@ dat[, cnt_males := ifelse(sex == "male", 1, 0)]
 dat[, cnt_highincome := ifelse(income >= 9000, 1, 0)]
 ```
 
-We are now adding record keys to the data set that are going to be used later. In the following example we use the *"destatis"* input format for the perturbation table. For this reason, we also need to compute the record keys according to this format by specifying `type = "destatis"` in function `ck_generate_rkeys` as shown below:
+We are now adding record keys with 7 digits to the data set that are going to be used later using function `ck_generate_rkeys` as shown below:
 
 ```{r}
-dat$rkeys <- ck_generate_rkeys(dat = dat, type = "destatis", verbose = FALSE)
+dat$rkeys <- ck_generate_rkeys(dat = dat, nr_digits = 7)
+print(head(dat))
 ```
-
-The goal of this introduction is to create a perturbed table of counts of variables `sex` by `age` for all observations as well as for the subgroups in `cnt_males` and `cnt_highincome` that are non-zero. We also want to create perturbed tables of continously scaled variables `savings` and `income` also giving the hierarchical structure defined by `sex` by `age`.
-
-### Create required input
-The first step in this approach is to generate or rather set some parameters that are using in the perturbation approach. These inputs are put together using function `ck_create_pert_params()`. In this example we are using the *"destatis"* way to specify the perturbation table. For an example on how to use the ABS-way, please refer to `?ck_create_pTable`.
-
-```{r}
-pert_params <- ck_create_pert_params(
-  pTable = ck_create_pTable(
-    D = 5, 
-    V = 3, 
-    pTableSize = 70, 
-    type = "destatis"
-  ),
-  sTable = ck_generate_sTable(smallC = 12), 
-  mTable = c(0.6, 0.4, 0.2)
-)
-```
-
-The parameters that have to be specified are:
-
-- `pTable`: a perturbation table containing perturbation values. Function `ck_create_pTable()` wraps functionality from the [**ptable**](https://github.com/sdcTools/ptable) package and returns a perturbation table in either *"abs"* or *"destatis"* format.
-- `sTable`:  (optional) a table containing the noise component for numerical variables. Function `ck_generate_sTable()` allows to generate suitable inputs.
-- `mTable`: (optional) a numeric vector containing parameters for the magnitude of perturbation for numerical variables
-
-The output of `ck_create_pert_params` is an object of class `pert_params` that is required in the next function that must be called. In `ck_create_input()` we finally create the required input to be able to compute some perturbed tables as follows.
-
-```{r}
-inp <- ck_create_input(
-  dat = dat, 
-  def_rkey = "rkeys", 
-  pert_params = pert_params
-)
-print(class(inp))
-```
-
-We were able to specify the (existing) variable name `rkeys` containing record keys in argument `def_rkey` of function `ck_create_input`. If record keys have not been generated yet, one can set this argument to a number . In this case, the function computes record keys based on the format of the perturbation table (slot `pTable` in argument `pert_params`). If the perturbation table is in abs-format, record keys between 1 and `def_key` are randomly computed. In case the perturbation table is in destatis-format, the record keys are sampled from a uniform distribution between 0 and 1 and rounded to the number of digits specified in parameter `def_rkey`.
 
 To ensure that the same record keys are computed each and every time for the same data set, a seed based on the sha1-hash of the input dataset is computed and used before drawing the record keys.
 
+The goal of this introduction is to create a perturbed table of counts of variables `sex` by `age` for all observations as well as for the subgroups in `cnt_males` and `cnt_highincome` that are non-zero. We also want to create perturbed tables of continously scaled variables `savings` and `income` also giving the hierarchical structure defined by `sex` by `age`.
+
 ### Specifying dimensions
-The next step is to define hierarchies for each of the classifying variables. There are two ways how the hierarchical structure of these variables (including sub-totals) can be specified. One way is to use `"@; value` format as (also) used in [**sdcTable**](ttps://cran.r-project.org/package=sdcTable). We would suggest however, to use the second alternative which is using functionality from package [**sdcHierarchies**](ttps://cran.r-project.org/package=sdcHierarchies). In this vignette, we only show the preferred way to generate hierarchies for categorical variables `age` and `sex` below:
+It is required to define hierarchies for each of the classifying variables of the desired table. There are two ways how the hierarchical structure of these variables (including sub-totals) can be specified. One way is to use `"@; value` format as (also) used in [**sdcTable**](ttps://cran.r-project.org/package=sdcTable). We would suggest however, to use the second alternative which is using functionality from package [**sdcHierarchies**](ttps://cran.r-project.org/package=sdcHierarchies). In this vignette, we only show the preferred way to generate hierarchies for categorical variables `age` and `sex` below:
 
 ```{r}
 dim_sex <- hier_create(root = "Total", nodes = c("male", "female"))
@@ -106,163 +86,143 @@ dim_age <- hier_create(root = "Total", nodes = paste0("age_group", 1:6))
 hier_display(dim_age)
 ```
 
-The idea of [**sdcHierarchy**](https://github.com/bernhard-da/sdcHierarchies) is to create a tree object using `hier_create()` and then add (using `hier_add()`), delete (with `hier_delete()`) or rename (using `hier_rename()`) elements from this hierarchical structure. For more examples have a look at the package vignette of the package which can be accessed with `sdcHierarchies::hier_vignette()`. [**sdcHierarchy**](https://github.com/bernhard-da/sdcHierarchies) also contains a shiny-app that can be called with `hier_app()` which allows to interactively change and modify a hierarchy and allows to convert tree- and data.frame based inputs into various formats. For more information, have a look at `?hier_app` and the other help-files of the package.
+The idea of [**sdcHierarchy**](https://github.com/bernhard-da/sdcHierarchies) is to create a tree object using `hier_create()` and then add (using `hier_add()`), delete (with `hier_delete()`) or rename (using `hier_rename()`) elements from this hierarchical structure. For more examples have a look at the package vignette of the package which can be accessed with `sdcHierarchies::hier_vignette()`. [**sdcHierarchy**](https://github.com/bernhard-da/sdcHierarchies) also contains a shiny-based app that can be called with `hier_app()` which allows to interactively change and modify a hierarchy and allows to convert tree- and data.frame based inputs into various formats. For more information, have a look at `?hier_app` and the other help-files of the package.
 
-After all dimensions have been specified, these inputs must then be combined into a named list where the names of the list elements contain variable names of the input data set and the elements the data objects that hold the hierarchy specification. This is why the list elements of `dimList` in this example have to be named `sex` and `age`. 
+After all dimensions have been specified, these inputs must then be combined into a named list. In this object, the list-names refer to variable names of the input data set and the elements the data objects that hold the hierarchy specification itself. This is why the list elements of `dims` in this example have to be named `sex` and `age` as the specification refers to variables `age` and `sex` in input set `dat`.
 
 ```{r}
-dimList <- list(sex = dim_sex, age = dim_age)
-print(dimList)
+dims <- list(sex = dim_sex, age = dim_age)
+print(dims)
+```
+
+
+### Define perturbation parameters for count variables
+The next task is to define parameters that are used to perturb count variables which can be archieved using function `ck_params_cnts`. This function wraps `pt_create_pTable` from the [**ptable**](https://github.com/sdcTools/ptable) package, so for the parameters have a look at the help page for this function. A typical application is shown below:
+
+```{r}
+params_cnts <- ck_params_cnts(
+  D = 5,
+  V = 3,
+  js = 2,
+  pstay = 0.5,
+  optim = 1,
+  mono = TRUE
+)
+```
+
+The output of `ck_params_cnts` is an object that can be directly used in `ck_setup()` as we will see later.
+
+### Define perturbation parameters for continuous variables
+To be written
+
+
+### Setup a table instance
+We now have prepared the inputs and can define a generic statistical table using `ck_setup()` as shown below:
+
+```{r}
+tab <- ck_setup(
+  x = dat,
+  rkey = "rkeys",
+  dims = dims,
+  w = "sampling_weight",
+  countvars = c("cnt_males", "cnt_highincome"),
+  numvars = NULL,
+  params_cnts = params_cnts,
+  params_nums = NULL
+)
+```
+
+`ck_setup()` returns a `R6` class object that contains not only the relevant data but also all available methods. Thus, it is not required to assign the results of such methods to new objects, instead, the object itself is automatically updated.
+
+These objects also have a custom print method, showing some general information about the object:
+
+```{r}
+print(tab)
 ```
 
 ### Compute perturbed tables
-It is now possible to finally compute perturbed tables using function `perturbTable()`. This function takes the following parameters:
+It is now possible to finally perturbed variables using the `perturb()`-method. As `tab` - the object created with `ck_setup()` - already contains all possible data, the only required input is the name of a count- or numeric variable that should be perturbed.
 
-- `inp`: required, an object of class `pert_input` created with `ck_create_input()`
-- `dimList`: required, a `list` containing definitions of hierarchies of all variables that will define the table
-- `weightVar`: optional, a variable name existing in `slot(inp, "microdat)` holding sampling weights for each unit in the micro data or or `NULL` if no weights are available. In this case, each unit is assigned sampling weight 1 in the data
-- `countVars`: optional, a vector of variable names existing in `slot(inp, "microdat)` that should be perturbed. The key is that these variables need to be binary (0/1 coded).
-- `numVars`: optional, a vector of variable names existing in the input microdata that should be tabulated (and perturbed). 
-
-If both `countVars` and `numVars` are not specified, the perturbed count table based on all units is computed. Below it is shown, how a count table using existing sampling weights (available in variable `sampling_weight` in the input data) can be computed:
+- `v`: a character vector specifying one or more variables that should be perturbed.
 
 ```{r}
-tab1 <- perturbTable(
-  inp = inp, 
-  dimList = dimList, 
-  countVars = c("cnt_males", "cnt_highincome"), 
-  weightVar = "sampling_weight", 
-  numVars = NULL
-)
-print(tab1)
+tab$perturb(v = "total")
 ```
 
-Applying method `ck_freq_table()` to an output object of `perturbTable()` returns a `data.table` with all combinations of the dimensional variables `sex` and `age` as well as original and perturbed (un)weighted values are returned. In any case, the tabulation of all observations can be extracted (`vnames="Total"`). If additional variables have been specified in argument `countVars`, these can be queried too as shown below:
+After this call, object `tab` is updated and contains now also perturbed values for variable `total`. The actual results can then be extracted using the `freqtab()`-method as discussed in the next section.
+
+### Extract perturbed tables
+Applying the `freqtab()`-methods to one ore more already perturbed variables returns a `data.table` that contains for each table cell the unpertubed and perturbed (weighted and/or unweighted) counts. This function has the following arguments:
+
+- `v`: one or more variable names of already perturbed count variables
+- `type`: a scalar character defining what variables should be included in the result. Possible choices are `"both"` (the default), `"weighted"` and `"unweighted"` 
+- `path`: if not `NULL`, a (relative or absolute) path to which the resulting output table should be written. A `csv` file will be generated and `.csv` will be appended to the value provided.
+
+The method returns a `data.table` with all combinations of the dimensional variables in the first $n$ colums and after those, all (or some) of the following columns:
+
+- `vname`: name of the perturbed variable (always included)
+- `uwc`: unweighted counts (if `type` is `"both"` or `"unweighted"`)
+- `wc`: weighted counts (if `type` is `"both"` or `"weighted"`)
+- `puwc`: perturbed unweighted counts (if `type` is `"both"` or `"unweighted"`)
+- `pwc`: perturbed weighted counts (if `type` is `"both"` or `"weighted"`)
 
 ```{r}
-ck_freq_table(tab1) # show which tables have been generated
-ck_freq_table(tab1, vname = "cnt_males")
+tab$freqtab(v = "total", type = "both")
 ```
 
-In the example above we see, that all cells containing `sex=="female" no perturbation has been applied. The variables on this data set (additional to the dimensional variables) are:
-
-- `UWC`: unweighted counts
-- `pUWC`: perturbed unweighted counts
-- `WC`: weighted counts
-- `pWC`: perturbed weighted counts
-- `WCavg`: cell average weight
-
-Furthermore, additional columns are included in the output for debugging purposes. These columns may be removed in future versions of the package. These variables refer to the row- and column indices (variables `row_indices` and `col_indices` of the perturbation table used to extract a perturbation value (column `pert`) for any given cell. The computed cell keys are shown in column `cellKey`.
-
-Function `ck_cnt_measures()` applied to the resulting object of `perturbTable()` allows to compute information loss measures for perturbed count variables. Its application is as simple as:
+To query only the weighted unperturbed and perturbed counts for `total` and `cnt_males`, one could use the following code:
 
 ```{r}
-infoloss <- ck_cnt_measures(tab1, vname = "Total")
+tab$freqtab(v = "total", type = "weighted")
 ```
 
-This function returns a list with the following elements:
 
-- **measures:** a data.table containing measures of the distribution of three different distances between original and perturbed values of the unweighted counts. The three distances are
-    - absolute distance (column vals_abs), *D1*
-    - relative distance (column vals_rel), *D2*
-    - absolute distance between square-roots of original and perturbed values (column vals_r), *D3*
-- **cumDistrA:** a data.table showing the cumulative sum and proportion for distance *D1*
-- **cumDistrB:** a data.table showing the cumulative distributions for distances *D2* and *D3* for a set of intervals.
-- **false_zero:** number of cells that were perturbed to zero
-- **false_positives:** number of cells that were initially zero but have been perturbed to a number different from zero
-
-The next example shows how to create a perturbed table of continuous data using sampling weights. For this case, we need to specify parameter `numVars` in `perturbTable()`. Note that it is possible, to specify multiple variables at once.
+### Computing utility measures for count variables
+Method `measures()` allows to compute information loss measures for perturbed count variables. Its application is as simple as:
 
 ```{r}
-tab2 <- perturbTable(
-  inp = inp, 
-  dimList = dimList,  
-  weightVar = "sampling_weight", 
-  countVars = c("cnt_males", "cnt_highincome"), 
-  numVars = c("savings", "income")
-)
+tab$measures(v = "total")
 ```
 
-To get information about magnitute tables, function `ck_cont_table()` can be applied to the output of `perturbTable()`. In this case, we can set an additional argument `meanBeforeSum` that is either `TRUE` or `FALSE` and specifies, how the perturbed cell values are computed. Details on this method can be found in *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar) in Section *6.3*.
+This function returns a list several utility measures which are described in detail in `?ck_cnt_measures`.
 
-```{r}
-p_income <- ck_cont_table(inp = tab2, vname = "income", meanBeforeSum = TRUE)
+### Perturbing numeric variables
+
+The next example shows how to create a perturbed table of continuous data using sampling weights. We can perturb all variables that were specified in argument `numvars` when calling `ck_setup()`. Note that it is also possible to specify multiple variables at once.
+
+```{r, eval = FALSE}
+tab$perturb(v = "income")
+```
+
+To get information about magnitude tables, method `numtab()` can be used. In this case, we can set an additional argument `mean_before_sum` that is either `TRUE` or `FALSE` and specifies how the perturbed cell values are computed. Details on this method can be found in *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar) in Section *6.3*. All other arguments are identical to method `freqtab()` that was previously introduced.
+
+```{r, eval = FALSE}
+p_income <- tab$numtab(v = "income", mean_before_sum = TRUE)
 p_income
 ```
 
-The result obtained from `ck_cont_table` contains an attribute `modification` which holds a `data.table` containing all the perturbations for the variable queried in `vname`. We can access this information as shown below:
-
-```{r}
-attr(p_income, "modifications")
-```
-
-We see that this `data.table` has the following variables:
-
-- `id`: the id of the observation in the input data set for which values were modified
-- `magnitude`: the amount of perturbation
-- `dir`: the direction of perturbation, -1 is negative, +1 is positive
-- `noise`: the noise term applied 
-- `vals.orig`: the original value of the variable
-- `vals.pert`: the amount of perturbation (`magnitude * dir * noise * vals.orig`)
-- `vals.mod`: the final perturbed value (`vals.orig`+`vals.pert`)
-
-An interesting feature is that one can optionally specify argument `by` in `perturbTable()` which is relevant for the computation of perturbed magnitude tables. The idea is that it allows to compute magnitude tables restricted to some units in the data set. In the following example we show how to create a perturbed table of `savings` for only those observations that have high income (variable `cnt_highincome`).
-
-```{r}
-tab3 <- perturbTable(
-  inp = inp, 
-  dimList = dimList,  
-  weightVar = "sampling_weight", 
-  numVars = c("savings"), 
-  by = "cnt_highincome"
-)
-```
-
-We note that if the by_variable has been specified, it will be automatically added to `countVars` internally, so we can also use `ck_freq_table()` with the by-variable even it was not explicitely specified in `countVars`.
-
-```{r}
-# frequency table of the by-variable
-ck_freq_table(inp = tab3, vname = "cnt_highincome")
-```
-
-To show the table of variable `savings` we use again `ck_cont_table()`.
- 
-```{r}
-ck_cont_table(inp = tab3, vname = "savings", meanBeforeSum = TRUE)
-```
- 
-From the results we can observe that there are no high-income units in the highest age group (`age_group6`) and those cells are not perturbed at all.
-
-Using function `ck_export_table()` which can be applied to outputs of `perturbTable()`. This functions returns a simple `data.frames` containing all cells and perturbed (weighted) values for a given perturbed variables. We could apply it to the `Total`-variable as follows
-
-```{r}
-dt_tot <- ck_export_table(tab3, vname = "Total", type = "both")
-head(dt_tot)
-```
 
 ### Extract information from results
-Some auxiliary methods may be applied to output object of function `perturbTable()`. The structure of such objects is shown below:
+Some auxiliary methods may be applied to an object created with `ck_setup()`. For example one can query the applied perturbations for counts using the `mod_cnts()` method. This returns a `data.table` showing for each cell and tabulated variable the row and the column of the perturbation table that was used to find the perturbation value actually used. The value itself is also included.
 
 ```{r}
-slotNames(tab2)
+tab$mod_cnts()
 ```
 
-Information on perturbations for counts can be extracted using `mod_counts()`. The method returns a `data.table` showing for each cell and tabulated variable the row and the column of the perturbation table that was used to find the perturbation value actually used. This value is also shown in the output.
-```{r}
-head(mod_counts(tab2))
+Information on perturbations for numerical variables can be extracted using `mod_nums()`. This `data.table` contains the ids of the observations of the input variables that have been modified. For each observation and tabulated numerical variable (given in `numvars`), the parameters used in modifying (direction, magnitude and noise) are shown as well as the original values, the perturbation and the final modified value. These values were finally used to compute the tables itself.
+```{r, echo = FALSE}
+message("WRITE METHOD mod_nums()")
 ```
 
-Information on perturbations for numerical variables can be extracted using `mod_numvars()`. This \code{data.table} contains the ids of the observations of the input variables that have been modified. For each observation and tabulated numerical variable (given in `numVar`), the parameters used in modifying (direction, magnitude and noise) are shown as well as the original values, the perturbation and the final modified value. These values were finally used to compute the tables itself.
-```{r}
-head(mod_numvars(tab2))
+```{r, eval = FALSE}
+tab$mod_nums()
 ```
 
-Finally we note that there are `print` and `summary` methods implemented for objects returned from `perturbTable()` which can be used as shown below:
+Finally we note that there are `print` and `summary` methods implemented for objects created with from `ck_setup()` which can be used as shown below:
 
 ```{r}
-print(tab1)
-print(tab1, vname = "Total")
-summary(tab1)
+print(tab)
+#summary(tab)
 ```
 
 ## Summary
